# filewatch

./: .gitignore  README.md  meson.build  meson.options  pkgIndex.tcl.in  valgrind.supp
.github/workflows/: release.yml
doc/: filewatch.md.in  inotify.md.in  meson.build
generic/: filewatch.tcl.in  filewatchInt.h  init.tcl.in  main.c  meson.build  watchdir_base.tcl.in
linux/: backend_inotify.h  inotify.c  meson.build  queue.tcl  watchdir.tcl.in
mac/: backend_fsevents.h  fsevents.c  meson.build  shim_inotify.c  shim_inotify.h  watchdir.tcl.in  watcher_fsevents.tcl.in
scripts/: queue.tcl  watchdir.tcl
tests/: basic.test  queue.test  watchdir.test
win/: backend_dirwatch.h  dirwatch.c  meson.build  shim_inotify.c  shim_inotify.h  watchdir.tcl.in  watcher_dirwatch.tcl  watcher_dirwatch.tcl.in
